...
    <string name="logoutTitle">Log-Out</string>
    <string name="cancel">Cancel</string>
    <string name="usernameTextTitle">Username:</string>
    <string name="passwordTextTitle">Password:</string>
    <string name="re_enterPassword">Re-Enter Password:</string>
    <string name="textViewOr">Or</string>
    <string name="signinTextTitle">Sign-In</string>

    <string name="createaccountButtonText">Create an account</string>
    <string name="createaccountTitle">Create Account</string>
    <string name="main_menuTitle">Main-Menu</string>

    <string name="addItemsbutton">Add Items into Inventory</string>
...
    <string name="biscuit">Biscuit</string>
    <string name="cookie">Cookie</string>
    <string name="cake">Cake</string>
    <string name="ingredient">Ingredient</string>
    <string name="other">Other</string>

    <string name="addUsersButton">Add Users</string>
    <string name="addUserButton">Add User</string>
    <string name="viewUsersButton">View Users</string>
    <string name="removeUsersButton">Remove Users</string>
    <string name="removeUserButton">Remove User</string>

    <string name="viewUsersTitle">Users</string>

    <string name="adminmenu">Admin Menu</string>

    <string name="touserMenu">Users Menu</string>
...
