...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/usernameTextTitle"
        app:layout_constraintEnd_toStartOf="@+id/editTextUsernameLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/passwordTextTitle"
        app:layout_constraintEnd_toStartOf="@+id/editTextPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitleLogin" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="218dp"
        android:layout_height="58dp"
...
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintextTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="108dp"
        android:layout_height="65dp"
        android:layout_marginBottom="24dp"
        android:text="@string/signinTextTitle"
        app:layout_constraintBottom_toTopOf="@+id/textViewOr"
        app:layout_constraintEnd_toEndOf="parent"
...
