<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Add_Users">

    <TextView
        android:id="@+id/addUserTitleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addUserButton"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTextViewAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/usernameTextTitle"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameEditTextAddUser"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordTextViewAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/passwordTextTitle"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordEditTextAddUsers"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameEditTextAddUser"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/usernameTextViewAdmin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditTextAddUsers"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passwordTextViewAdmin"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextAddUser" />

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="302dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/addUserButton"
        android:textColor="#1DEF25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextAddUsers" />

    <Button
        android:id="@+id/mainMenuFromAddUser"
        android:layout_width="302dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/backToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUserButton" />

    <Button
        android:id="@+id/viewUsersFromAddUser"
        android:layout_width="302dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:text="@string/viewUsersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUserButton" />
</androidx.constraintlayout.widget.ConstraintLayout>