...
        android:layout_marginTop="116dp"
        android:text="@string/usernameTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/removeUserEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
...
        android:text="@string/backToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeUserButton" />

    <Button
        android:id="@+id/viewUsersFromRemoveUsers"
        android:layout_width="226dp"
        android:layout_height="67dp"
        android:text="@string/viewUsersButton"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuFromRemoveUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
